--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -11,26 +11,23 @@ jobs:
     runs-on: ubuntu-latest
     
     steps: 
-    - name: Checkout
+    - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.12
+        python-version: '3.12'
 
     - name: Install dependencies
       run: |
         pip install requests
 
-    - name: Sync DNS records
+    - name: Run DNS sync script
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}  # 可选
+        CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}  # optional
         TARGET_DOMAIN: ${{ vars.TARGET_DOMAIN }}
         SOURCE_HOSTNAME: ${{ vars.SOURCE_HOSTNAME || 'a.netlify.app' }}
-
-
-    - name: Read
       run: |
         python ${{ github.workspace }}/run.py
