--- a/.github/workflows/cf.yml
+++ b/.github/workflows/cf.yml
@@ -1,4 +1,4 @@
-name: Update
+name: UpdateCF
 
 on:
   watch:
@@ -28,6 +28,6 @@ jobs:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}  # optional
         TARGET_DOMAIN: ${{ vars.TARGET_DOMAIN }}
-        SOURCE_HOSTNAME: ${{ vars.SOURCE_HOSTNAME || 'auv.cloudflare.182682.xyz }}
+        SOURCE_HOSTNAME: ${{ vars.SOURCE_HOSTNAME || 'auv.cloudflare.182682.xyz' }}
       run: |
         python ${{ github.workspace }}/runcf.py
