--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -28,6 +28,6 @@ jobs:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}  # optional
         TARGET_DOMAIN: ${{ vars.TARGET_DOMAIN }}
-        SOURCE_HOSTNAME: ${{ vars.SOURCE_HOSTNAME || 'a.netlify.app' }}
+        SOURCE_HOSTNAME: ${{ vars.SOURCE_HOSTNAME || 'edge-functions-examples.netlify.app' }}
       run: |
         python ${{ github.workspace }}/run.py
