--- a/.github/workflows/st.yml
+++ b/.github/workflows/st.yml
@@ -28,6 +28,6 @@ jobs:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}  # optional
         TARGET_DOMAIN: ${{ vars.ST_TARGET_DOMAIN }}
-        SOURCE_HOSTNAME: ${{ vars.SOURCE_HOSTNAME || '' }}
+        SOURCE_HOSTNAME: ${{ vars.SOURCE_HOSTNAME || '4yvjzrwg.litecdncname.com' }}
       run: |
         python ${{ github.workspace }}/run.py
